add sliders blocks

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;0,800;0,900;1,700;1,800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;0,800;0,900;1,700;1,800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -446,6 +448,219 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="product__carousel">
+                                    <div class="product__inner-descr">
+                                        <div class="product__inner-title">Top products</div>
+                                    </div>
+                                    <div class="product__inner-items">
+                                        <div class="product__inner-contents product__carousel-contents">
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category hot"><span>hot</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price hot-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category"><span>new</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category hot"><span>hot</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price hot-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category"><span>new</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category"><span>new</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category"><span>new</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="product__carousel">
+                                    <div class="product__inner-descr">
+                                        <div class="product__inner-title">sale products</div>
+                                    </div>
+                                    <div class="product__inner-items">
+                                        <div class="product__inner-contents product__carousel-contents">
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category"><span>new</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category hot"><span>hot</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price hot-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category hot"><span>hot</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price hot-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category new"><span>new</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category"><span>new</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="product__carousel-item">
+                                                <div class="product__item">
+                                                    <div class="product__item-category"><span>new</span></div>
+                                                    <div class="product__item-img">
+                                                        <img src="img/product/surf.jpg" alt="">
+                                                    </div>
+                                                    <div class="product__item-info">
+                                                        <div class="product__item-name">Single Thruster 2014</div>
+                                                        <div class="product__item-price">
+                                                            <div class="new-price">€.865</div>
+                                                            <div class="old-price">€.1,270</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="brand">
+                <div class="container">
+                    <div class="brand__inner">
+                        <div class="brand__inner-bun" style="background-image: url();"></div>
+                        <div class="brand__inner-title"></div>
+                        <div class="brand__inner-posts">
+                            <div class="brand__item">
+                                <img src="" alt="">
                             </div>
                         </div>
                     </div>
