--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;0,800;0,900;1,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -656,11 +658,56 @@
             <section class="brand">
                 <div class="container">
                     <div class="brand__inner">
-                        <div class="brand__inner-bun" style="background-image: url();"></div>
-                        <div class="brand__inner-title"></div>
-                        <div class="brand__inner-posts">
+                        <div class="brand__inner-bun" style="background-image: url(img/brand/brand-bg.jpg);"></div>
+                        <div class="brand__inner-title"><span class="icon-instagram"></span>Instagram feed:<a
+                                href="#">#surfhouse</a></div>
+                        <div class="brand__inner-posts owl-carousel">
                             <div class="brand__item">
-                                <img src="" alt="">
+                                <img src="img/brand/item1.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item2.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item3.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item4.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item5.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item6.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item1.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item2.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item3.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item4.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item5.jpg" alt="">
+                            </div>
+                            <div class="brand__item">
+                                <img src="img/brand/item6.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="brand__inner-social">
+                            <div class="brand__item-social brand__item-face">
+                                <a href="#" class="icon-facebook"></a>
+                            </div>
+                            <div class="brand__item-social brand__item-twi">
+                                <a href="#" class="icon-twitter"></a>
+                            </div>
+                            <div class="brand__item-social brand__item-pint">
+                                <a href="#" class="icon-pinterest-p"></a>
                             </div>
                         </div>
                     </div>
@@ -669,6 +716,97 @@
         </div>
 
         <div class="footer">
+            <div class="footer__inner">
+                <div class="footer__inner-top">
+                    <div class="container">
+                        <div class="footer__inner-content">
+                            <div class="footer__inner-item item-category">
+                                <div class="footer__inner-title">Category</div>
+                                <ul class="footer__inner-list">
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">about us</a></li>
+                                    <li><a href="#">eshop</a></li>
+                                    <li><a href="#">Features</a></li>
+                                    <li><a href="#">new collections</a></li>
+                                    <li><a href="#">blog</a></li>
+                                    <li><a href="#">contact</a></li>
+                                </ul>
+                            </div>
+                            <div class="footer__inner-item item-category">
+                                <div class="footer__inner-title">Our Account</div>
+                                <ul class="footer__inner-list">
+                                    <li><a href="#">Your Account</a></li>
+                                    <li><a href="#">Personal information</a></li>
+                                    <li><a href="#">Addresses</a></li>
+                                    <li><a href="#">Discount</a></li>
+                                    <li><a href="#">Orders history</a></li>
+                                    <li><a href="#">Addresses</a></li>
+                                    <li><a href="#">Search Terms</a></li>
+                                </ul>
+                            </div>
+                            <div class="footer__inner-item item-category">
+                                <div class="footer__inner-title">Our Support</div>
+                                <ul class="footer__inner-list">
+                                    <li><a href="#">Site Map</a></li>
+                                    <li><a href="#">Search Terms</a></li>
+                                    <li><a href="#">Advanced Search</a></li>
+                                    <li><a href="#">Mobile</a></li>
+                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="#">Mobile</a></li>
+                                    <li><a href="#">Addresses</a></li>
+                                </ul>
+                            </div>
+                            <div class="footer__inner-item item-form">
+                                <div class="footer__inner-title">Newsletter</div>
+                                <div class="footer__inner-descr">
+                                    Join thousands of other people subscribe to our news
+                                </div>
+                                <form>
+                                    <input type="text" placeholder="insert email">
+                                    <button type="submit">Submit</button>
+                                </form>
+                                <div class="footer__inner-pay">
+                                    <a class="bg-pay1" href="#"></a>
+                                    <a class="bg-pay2" href="#"></a>
+                                    <a class="bg-pay3" href="#"></a>
+                                    <a class="bg-pay4" href="#"></a>
+                                    <a class="bg-pay5" href="#"></a>
+                                    <a class="bg-pay6" href="#"></a>
+                                </div>
+                            </div>
+                            <div class="footer__inner-item item-contacts">
+                                <div class="footer__inner-title">Category</div>
+                                <div class="footer__inner-descr">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
+                                </div>
+                                <div class="footer__inner-contacts">
+                                    <a href="tel:19993429876">Phone: <span>1-999-342-9876</span></a>
+                                    <a href="email:info@surfhouse.com">Email:<span>info@surfhouse.com</span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__inner-bottom">
+                    <div class="container">
+                        <div class="footer__inner-box">
+                            <div class="footer__box-title">&copy 2014  SURFHOUSE. All rights reserved - Designed by theuncreativelab.com</div>
+                            <div class="footer__box-social">
+                                <div class="header__inner-social">
+                                    <a class="icon-facebook-f" href="#"></a>
+                                    <a class="icon-twitter" href="#"></a>
+                                    <a class="icon-instagram" href="#"></a>
+                                    <a class="icon-pinterest-p" href="#"></a>
+                                    <a class="icon-youtube" href="#"></a>
+                                    <a class="icon-tumblr" href="#"></a>
+                                    <a class="icon-google-plus" href="#"></a>
+                                    <a class="icon-feed" href="#"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -678,6 +816,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
