create apparel.html, more.html, shop.html

--- a/app/index.html
+++ b/app/index.html
@@ -114,7 +114,7 @@
                                     <div class="aside__menu-title">Menu</div>
                                     <ul class="aside__menu-list">
                                         <li>
-                                            <a href="#">About</a>
+                                            <a href="#">home</a>
                                         </li>
                                         <li>
                                             <a href="#">apparel</a>
@@ -138,7 +138,7 @@
                                             <a href="#">brands</a>
                                         </li>
                                         <li>
-                                            <a href="#">blog</a>
+                                            <a href="#">Shopping Cart</a>
                                         </li>
                                         <li>
                                             <a href="#">Gadgets</a>
