--- a/app/apparel.html
+++ b/app/apparel.html
@@ -28,7 +28,7 @@
                         <div class="header__inner-info">
                             <div class="header__inner-box">
                                 <a class="header__inner-logo" href="index.html">
-                                    <img src="img/header/logo.svg" alt="logo">
+                                    <img alt="logo" src="img/header/logo.svg" alt="logo">
                                 </a>
                                 <div class="header__inner-social">
                                     <a class="icon-facebook-f" href="#"></a>
@@ -263,7 +263,7 @@
                                         <div class="product__item-category new"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -286,7 +286,7 @@
                                         <div class="product__item-category new"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -309,7 +309,7 @@
                                         <div class="product__item-category"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -332,7 +332,7 @@
                                         <div class="product__item-category hot"><span>hot</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -355,7 +355,7 @@
                                         <div class="product__item-category new"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -378,7 +378,7 @@
                                         <div class="product__item-category new"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -401,7 +401,7 @@
                                         <div class="product__item-category"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -424,7 +424,7 @@
                                         <div class="product__item-category"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -447,7 +447,7 @@
                                         <div class="product__item-category hot"><span>hot</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -470,7 +470,7 @@
                                         <div class="product__item-category new"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -493,7 +493,7 @@
                                         <div class="product__item-category new"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -516,7 +516,7 @@
                                         <div class="product__item-category hot"><span>hot</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -539,7 +539,7 @@
                                         <div class="product__item-category"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -562,7 +562,7 @@
                                         <div class="product__item-category new"><span>new</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
@@ -585,7 +585,7 @@
                                         <div class="product__item-category hot"><span>hot</span></div>
                                         <div class="product__item-descr">
                                             <div class="product__item-img">
-                                                <img src="img/apparel/product.jpg" alt="">
+                                                <img alt="product" src="img/apparel/product.jpg" alt="">
                                             </div>
                                             <div class="product__item-info">
                                                 <div class="product__item-name">sleeve springs suit</div>
