--- a/app/more.html
+++ b/app/more.html
@@ -223,27 +223,27 @@
                                     <div class="more__inner-slider">
                                         <div class="slider-for">
                                             <div class="slider-for__item">
-                                                <img src="img/more/for.jpg" alt="">
+                                                <img src="img/more/for.jpg" alt="for">
                                             </div>
                                             <div class="slider-for__item">
-                                                <img src="img/more/for.jpg" alt="">
+                                                <img src="img/more/for.jpg" alt="for">
                                             </div>
                                             <div class="slider-for__item">
-                                                <img src="img/more/for.jpg" alt="">
+                                                <img src="img/more/for.jpg" alt="for">
                                             </div>
                                         </div>
                                         <div class="slider-nav">
                                             <div class="slider-nav__item">
-                                                <img src="img/more/nav.jpg" alt="">
+                                                <img src="img/more/nav.jpg" alt="nav">
                                             </div>
                                             <div class="slider-nav__item">
-                                                <img src="img/more/nav.jpg" alt="">
+                                                <img src="img/more/nav.jpg" alt="nav">
                                             </div>
                                             <div class="slider-nav__item">
-                                                <img src="img/more/nav.jpg" alt="">
+                                                <img src="img/more/nav.jpg" alt="nav">
                                             </div>
                                             <div class="slider-nav__item">
-                                                <img src="img/more/nav.jpg" alt="">
+                                                <img src="img/more/nav.jpg" alt="nav">
                                             </div>
                                         </div>
                                     </div>
@@ -431,7 +431,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category hot"><span>hot</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -445,8 +445,8 @@
                                         <div class="more-slider__item">
                                             <div class="product__item">
                                                 <div class="product__item-category new"><span>new</span></div>
-                                                <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                <div class="product__item-img">more
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -461,7 +461,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category"><span>hot</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -476,7 +476,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category"><span>hot</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -491,7 +491,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category new"><span>new</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -506,7 +506,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category hot"><span>hot</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -526,7 +526,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category hot"><span>hot</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -541,7 +541,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category new"><span>new</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -556,7 +556,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category"><span>hot</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -571,7 +571,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category"><span>hot</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -586,7 +586,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category new"><span>new</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
@@ -601,7 +601,7 @@
                                             <div class="product__item">
                                                 <div class="product__item-category hot"><span>hot</span></div>
                                                 <div class="product__item-img">
-                                                    <img src="img/more/more-slide.jpg" alt="">
+                                                    <img src="img/more/more-slide.jpg" alt="more">
                                                 </div>
                                                 <div class="product__item-info">
                                                     <div class="product__item-name">Single Thruster 2014</div>
