--- a/app/contacts.html
+++ b/app/contacts.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
 
         <div class="content">
-            <header class="header apparel contacts">
+            <header class="header apparel">
                 <div class="header__inner" style="background-image: url(img/contacts/map.jpg);">
                     <div class="container">
                         <div class="header__inner-info">
@@ -120,6 +120,7 @@
                                             <input name="subject" type="text" placeholder="e.g. info" required>
                                             <label for="">message</label>
                                             <textarea name=""></textarea>
+                                            <button class="contacts__inner-btn" type="submit">submit</button>
                                         </form>
                                     </div>
                                     <div class="contacts__inner-location">
